# Tantra-LLM

./: .gitignore  ABOUT.md  ADVANCED_SYSTEM_README.md  BUG_FIXES_REPORT.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DYNAMIC_MODEL_SYSTEM_README.md  DYNAMIC_WEIGHTS_README.md  EXPERIMENTATION_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_LOG.md  LICENSE  MODELS.md  OCR_NATIVE_SUMMARY.md  PERFORMANCE_TARGETS.md  PROJECT_PLAN.md  README.md  README_MULTIMODAL_LANGUAGE.md  README_OCR_NATIVE.md  ROADMAP.md  SECURITY.md  STABLE_V1_PLAN.md  TANTRA_WEIGHTS_SUMMARY.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md  ULTRA_LARGE_MODEL_SUMMARY.md  WEIGHT_FORMATS_SUMMARY.md  WEIGHT_SYSTEM_README.md  __init__.py  cleanup_system.py  create_model_weights.py  create_sample_weights.py  debug_attention.py  demo_conversational_speech.py  demo_multimodal_language.py  download_manifest.json  dynamic_model_analysis_report.md  experiment.py  experiment_1_conversational_results.json  fine_tune_model.py  (+34 more)
.github/: RELEASE_NOTES_TEMPLATE.md  REPOSITORY_SETTINGS.md  description.txt  metadata.json  repository-configure.ps1  repository-configure.sh  topics.txt  website.txt
Config/: agent.yaml  data_sources.yaml  multimodal.yaml  multimodal_language.yaml  ocr_memory.yaml  ocr_native.yaml  pretrain.yaml  realtime.yaml  serve.yaml  tantra.yaml  tantra_ocr.yaml
Dataset/: sample.jsonl
Docs/: DATA_PROVENANCE.md  DOCS.md
Examples/: demo_ocr_native.py
Model/: tokenizer.json  tokenizer_vocab.json  weight_config.json
Test/: test_agent.py  test_api.py  test_basic.py  test_comprehensive.py  test_multimodal_comprehensive.py  test_multimodal_language.py  test_ocr_memory.py  test_ocr_native.py  test_realtime.py
Training/: agent.py  combine_datasets.py  config_manager.py  data_fetch.py  download_datasets.py  embedding_build.py  eval_multimodal.py  eval_suite.py  fetch_small_model.py  mamba_runtime.py  memory.py  model_mamba.py  model_mamba3_multimodal.py  model_manager.py  model_runtime.py  multimodal_language_model.py  ocr_architecture_comparison.py  ocr_implementation_guide.py  ocr_memory.py  ocr_native_llm.py  ocr_native_model.py  rag_index.py  serve_api.py  serve_multimodal_api.py  serve_realtime.py  tantra_ocr_llm.py  tantra_runtime.py  tokenizer_train.py  tools_basic.py  train_multimodal_language.py  train_ocr_native.py  training_main.py  training_main_multimodal.py  training_multimodal.py  training_pretrain.py  training_tantra_ocr.py  weight_manager.py
config/: memory_config.py  model_config.py  settings.py
core/: CONTRIBUTING.md  __init__.py  cognitive_middleware.py  compute_routing.py  dynamic_context.py  hub.py  inference.py  memory.py  nervous_system.py  observability.py  planning.py  sentiment.py  token_streaming.py  vision.py  voice.py
data/: seed_chat.jsonl  seed_chat_gen.py
demos/: __init__.py  api_server.py  demo_advanced.py  demo_lightweight.py  demo_minimal.py  ecosystem_demo.py  gui_chat.py
docs/: ARCHITECTURE.md
encoders/: __init__.py  audio.py  tts.py  vision.py
examples/: demo_ocr_native.py
npdna/: __init__.py  autonomy.py  benchmark.py  brain.py  classifier.py  cli.py  codecs.py  config.py  cortex.py  distill.py  generation.py  genome.py  mesh.py  model.py  multimodal_context.py  plasticity.py  quant_turbo.py  tokenizer.py  train.py  train_npdna_v3.py
personality/: __init__.py  personality_layer.py  safety_module.py
scripts/: precompute_embeddings.py  start_api.ps1  train_fusion.py  verify_rwkv.py
tests/: __init__.py  test_agent.py  test_benchmark.py  test_checkpoint.py  test_cli.py  test_config_tokenizer.py  test_demo_minimal.py  test_e2e_brain.py  test_error_scenarios.py  test_fusion_stream.py  test_inference.py  test_npdna_fusion_integration.py  test_personality_modes.py  test_phase1_identity.py  test_phase1_model_loader.py  test_phase2_dynamic_context.py  test_semantic_graph.py  test_training_features.py
tools/: utils.py  (+14 more)
(+192 files in other folders)
